# dfsch

./: .gitignore  1+1.txt  AUTHORS  BUGS  ChangeLog  Doxyfile  Makefile  Makefile.am  NEWS  README  TODO  bootstrap.sh  configure.ac  core  dfsch  dfsch.c  dfsch.h  gen-doc.sh  gen-git-rev.sh  gen-module-docs.sh  git-make-stamp.sh  make-version-h.sh  meson.build  meson_options.txt  repl.c  s_copy.c  stream.c  stream.h  version.h
buildhere/: make-git-snapshot.sh
core-lib/: conditions.scm  objects.scm  std-lib.scm  system.scm  tagbody.scm
dfsch/: backquote.h  bignum.h  compile.h  compiler.h  conditions.h  defines.h  dfsch.h  dsc.h  eqhash.h  format.h  generate.h  generic.h  hash.h  import.h  introspect.h  load.h  magic.h  mkhash.h  number.h  object.h  parse.h  ports.h  pprint.h  promise.h  random.h  serdes.h  sha256.h  specializers.h  stream.h  strhash.h  strings.h  threads.h  trace.h  types.h  util.h  weak.h  wrapper.h  writer.h
dfsch/lib/: cdebug.h  cinspect.h  cmdopts.h  collections.h  console.h  crypto.h  csv.h  curl.h  extref.h  ffi.h  gcollect.h  gd.h  http.h  inet.h  ini-file.h  json.h  libc.h  load.h  minizip.h  newt.h  os.h  pcre.h  posix-regex.h  process.h  random.h  regex.h  shtml.h  socket-port.h  sxml.h  threads.h  tk-gui.h  tokyo-cabinet.h  tokyo-tyrant.h  unix.h  xml.h  zlib.h
doc/: dfsch-repl.1  dfsch.doc  image-format  indent.el  index.html  manual.md  notes.md  type-hierarchy
doc/example-module/: Makefile.am  configure.ac
doc/example-module/dfsch-ext/: example.h
doc/example-module/src/: example.c  example_mod.c
doxygen/html/: dfsch_8c-source.html  dfsch_8h-source.html  dfsch_8h.html  dfsch_8h__dep__incl.map  dfsch_8h__dep__incl.md5  files.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  repl_8c-source.html
doxygen/latex/: dfsch_8h.tex  dfsch_8h__dep__incl.eps  dfsch_8h__dep__incl.md5  doxygen.sty  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
dsc/: dsc.c
examples/: calculator.scm  http-server-demo.scm
ext/fastlz/: fastlz.c  fastlz.h
ext/minizip/: ioapi.c  zip.c
ext/upskirt/: array.c  buffer.c  markdown.c  renderers.c
lib/: cdebug.c  cdebug_mod.c  cinspect.c  cinspect_mod.c  cmdopts.c  cmdopts_mod.c  collections.c  collections_mod.c  console.c  console_mod.c  csv.c  csv_mod.c  curl.c  curl_mod.c  debug.c  extref.c  extref_mod.c  fastlz_mod.c  ffi.c  ffi_mod.c  gcollect.c  gd.c  gd_mod.c  http.c  http_mod.c  inet.c  inet_mod.c  ini-file.c  ini-file_mod.c  json.c  json_mod.c  libc.c  load.c  markdown_mod.c  minizip.c  minizip_mod.c  newt_mod.c  os.c  os_mod.c  pcre.c  (+28 more)
lib-scm/: dfsch-unit.scm  http-server.scm  markdown-tools.scm  match.scm  os-utils.scm  simple-tests.scm  sql.scm  tk-gui.scm
lib/crypto/: aes.c  blowfish.c  cipher.c  crypto.c  curve25519.c  ecdsa25519.c  fe25519.c  fe25519.h  ge25519.h  hmac.c  internal.h  macros.h  md4.c  md5.c  modes.c  module.c  prng.c  rc4.c  rsa-pad.c  rsa.c  salsa20.c  sc25519.c  sc25519.h  sha1.c  sha256-desc.c  sha256.c  sha512.c  sign25519.c  xtea.c
lib/sql/: dbi.c  sql-support.c  sqlite.c  sqlite3.c
scm/: ObjectFramework.scm  docgen.scm  http-server.scm  lib.scm  morse.scm  os-utils.scm  simple-tests.scm  stream-functions.scm  struct.scm  supermarket.scm  tak.scm  test.scm  tk-gui-demo.scm  tk-gui-interface-demo.scm  tk-gui-interface-demo.scm~  tk-gui.scm  unix-utils.scm
scm/benchmarks/: compile-tak.scm  let-tak.scm  parallel.scm  tak.scm
src/: backquote.c  bignum.c  compile.c  compiler.c  conditions.c  control.c  debug.c  dfsch.c  dfsch.h  eqhash.c  format.c  forms.c  generic.c  hash.c  internal.h  introspect.c  load.c  macros.c  mkhash.c  native.c  native.h  native_cxr.c  number.c  object.c  object.h  package.c  parse.c  ports.c  pprint.c  primitives.c  promise.c  random.c  repl.c  run.c  s_copy.c  serdes.c  sha256.c  source-tool.c  specializers.c  std-lib.scm  (+18 more)
tests/: c-api-test.c  compiler-tests.scm  fix-regression-tests.scm  interp-test.scm  json-parser-test.c  language-tests.scm  library-tests.scm  main.scm  platform-test.c  r5rs-tests.scm  scm-test-interp.sh  scm-test.sh  test-macros.h
tools/: docgen.scm
tools/benchmarks/: deriv.scm  let-tak.scm  manyadds.scm  parallel.scm
